Retargeted against CC.NET 1.8.3

--- a/src/ccnet.SvnRevisionLabeller.plugin/ccnet.Labeller.plugin.csproj
+++ b/src/ccnet.SvnRevisionLabeller.plugin/ccnet.Labeller.plugin.csproj
@@ -109,11 +109,9 @@
       <Name>System.XML</Name>
     </Reference>
     <Reference Include="ThoughtWorks.CruiseControl.Core">
-      <Name>ThoughtWorks.CruiseControl.Core</Name>
       <HintPath>..\..\lib\ThoughtWorks.CruiseControl.Core.dll</HintPath>
     </Reference>
-    <Reference Include="ThoughtWorks.CruiseControl.Remote, Version=1.4.0.3524, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="ThoughtWorks.CruiseControl.Remote">
       <HintPath>..\..\lib\ThoughtWorks.CruiseControl.Remote.dll</HintPath>
     </Reference>
   </ItemGroup>
